2012-02-10  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.10.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.10.

2011-08-18  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c, renderer.c: SECURITY FIX: Use the mktemp shell
	  command/mkstemp() function to create the debug log file and the
	  renderer input data file (both files only generated when
	  foomatic-rip is un in debug mode) with file names with an
	  unpredictable part. The names are /tmp/foomatic-rip-XXXXXX.log and
	  /tmp/foomatic-rip-YYYYYY.ps where the XXXXXX and YYYYYY are
	  replaced by random strings. Thanks to Tim Waugh from Red Hat for
	  for the patch (bug #936, CVE-2011-2924).

2011-07-25  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.9.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.9.

2011-07-25  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c: Fixed build of foomatic-rip on systems without
	  D-Bus. Thanks to Richard Hughes (hughsient at gmail dot com) for
	  the quick fix.

2011-07-25  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.8.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.8.

2011-07-24  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c: Removed stray characters from "pstoraster"
	  Ghostscript command line.

	* foomaticrip.c, pdf.c, renderer.c: Added "-dNOINTERPOLATE" to the
	  Ghostscript command lines as this makes Ghostscript rendering
	  the pages significantly faster. Use "ps2write" instead of "pswrite"
	  as PostScript output device as Ghostscript produced huge output
	  files with "pswrite" (and "pswrite" is also deprecated now).

	* foomaticrip.c: SECURITY FIX: It was possible to make CUPS executing
	  arbitrary commands as the system user "lp" when foomatic-rip was
	  used as CUPS filter. Fixed by not parsing named options (like
	  "--ppd lj.ppd") when foomatic-rip is running as CUPS filter, as